--- a/style.css
+++ b/style.css
@@ -27,9 +27,8 @@
 }
 
 * {
-  font-family: "MySanFrancisco", "SF Pro", system-ui, "Segoe UI", Roboto,
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol" !important;
+  font-family: "Papyrus", "SF Pro", system-ui, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
 }
 
 ytmusic-player-page:before {
